--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
     justify-content: space-evenly;
     flex-direction: column;
     align-items: center;
-    background-color: yellow;
+    background-color:rgb(189, 160, 117);
     width: 37em;
     height: 50em;
     margin-left: 38em;
